--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "electron .",
-    "build": "electron-builder"
+    "electron": "electron .",
+    "build": "electron-builder",
+    "dev": "vite",
+    "start": "concurrently \"npm run dev\" \"npm run electron\""
   },
   "build": {
     "appId": "com.yourcompany.myelectronapp",
@@ -28,6 +30,7 @@
   "devDependencies": {
     "@electron/rebuild": "^4.0.2",
     "@vitejs/plugin-react": "^5.1.2",
+    "concurrently": "^9.2.1",
     "electron": "^40.0.0",
     "electron-builder": "^26.4.0",
     "vite": "^7.3.1"
